--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,12 +92,13 @@ a {
 
 /* Home */
 .home {
-  position: relative;
-  height: 100vh;
-  width: 100%;
-  background-image: url("../images/cover.png");
+  position: absolute;
+  height: 0vh;
+  width: 0%;
+  /* background-image: url("../images/cover.png");
   background-size: cover;
-  background-position: center;
+  background-position: center; */
+ 
 }
 .home::before {
   content: "";
