--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ a {
   -webkit-backdrop-filter: blur(12px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
   transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
